<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="146dp">

        <TextView
            android:id="@+id/main_text_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_nom" />

        <EditText
            android:id="@+id/main_plainText_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/autofill_hint_nom"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/main_text_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_prenom" />

        <EditText
            android:id="@+id/main_plainText_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/autofill_hint_prenom"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_button_B01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_B01" />

            <Button
                android:id="@+id/main_button_B02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_B02" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>